--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jmx.default-domain=payment-validation-service
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#logger.level.root=INFO
-#logger.level.com=WARN
+#logging.level.root=INFO
+#logging.level.com.cpt=WARN
