--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,13 @@
 mytestkey=This value is from LOCAL properties file
 
+validator.rules=VALIDATOR_RULE1,DUPLICATE_TXN_CHECK
 
 logging.level.com.cpt=DEBUG
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/validations
-spring.datasource.username=root
-spring.datasource.password=#Verma119427
+spring.datasource.username=validations
+spring.datasource.password=cptraining
 
 # JDBC Connection Pool (Optional Tuning)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
