--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,17 @@
-mytestkey=This value is from LOCAL properties file
+4mytestkey=This value is from LOCAL properties file
 
 logging.level.com.cpt=DEBUG
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/validations
-spring.datasource.username=root
-spring.datasource.password=#Verma119427
+spring.datasource.username=validations
+spring.datasource.password=cptraining
 
 # JDBC Connection Pool (Optional Tuning)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password= # Leave empty if no password is set
+spring.redis.database=0
