--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,8 +4,8 @@ logging.level.com.cpt=DEBUG
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/validations
-spring.datasource.username=validations
-spring.datasource.password=cptraining
+spring.datasource.username=root
+spring.datasource.password=#Verma119427
 
 # JDBC Connection Pool (Optional Tuning)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
