--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -15,3 +15,26 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password= # Leave empty if no password is set
 spring.redis.database=0
+
+
+processing.createpayment.url=http://localhost:8082/v1/payments
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.enabled=true
+management.health.circuitbreakers.enabled=true
+ 
+management.endpoint.health.show-details=always
+
+
+resilience4j.circuitbreaker.instances.payment-processing-service.failureRateThreshold=40
+resilience4j.circuitbreaker.instances.payment-processing-service.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.payment-processing-service.waitDurationInOpenState=60s
+resilience4j.circuitbreaker.instances.payment-processing-service.register-health-indicator=true
+resilience4j.circuitbreaker.instances.payment-processing-service.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.payment-processing-service.permittedNumberOfCallsInHalfOpenState=2
+ 
+resilience4j.circuitbreaker.instances.payment-processing-service.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.payment-processing-service.slidingWindowType=COUNT_BASED
+
+
