--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,22 @@
-mytestkey=This value is from DEV properties file
+4mytestkey=This value is from DEV properties file
+
+logging.level.com.cpt=DEBUG
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://nov24-database-1.c7fikcay8pcp.ap-south-1.rds.amazonaws.com:3306/validations
+spring.datasource.username=validations
+spring.datasource.password=cptraining
+
+# JDBC Connection Pool (Optional Tuning)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=always
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password= # Leave empty if no password is set
+spring.redis.database=0
+
+
+processing.createpayment.url=http://localhost:8082/v1/payments
+
+
